--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -4,12 +4,12 @@ http-socket = =0
 ;uid = 65534
 ;gid = 65534
 
-die-on-term = 1
-honour-stdin = 1
+die-on-term = true
+honour-stdin = true
 
 master = true
 processes = 1
-threads = 1
+single-interpreter = true
 
 plugins = python3
 module = run
